# STS-Playable

./: CMakeLists.txt  README.md
BaseSTS/: CMakeLists.txt  Main.cpp  card.cpp  card.h  character.cpp  character.h  effects_triggers.cpp  effects_triggers.h  enemies.cpp  enemies.h  events.cpp  events.h  gamestate.h  gamestate1.cpp  gamestate2.cpp  gamestate3.cpp  ic_cards.cpp  ic_cards.h  pc_info.cpp  pc_info.h  potions.cpp  potions.h  relic.cpp  relic.h  savestate.cpp  savestate.h  top.cpp  top.h  visuals.cpp  visuals.h
